--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,33 @@
-name: Build Mod
+name: Build
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      - name: Build with Gradle
-        run: ./gradlew build --stacktrace
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
 
-      - name: Upload JAR
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: mod-jar
+          name: build-artifacts
           path: build/libs/*.jar
